# kicad-doc-mirror

./: CMakeLists.txt
doc/: CMakeLists.txt
doc/help/: CMakeLists.txt  makefile
doc/help/en/docs_src/: Getting_Started_in_KiCad.odt
doc/help/en/docs_src/cvpcb/: cvpcb_EN.odt
doc/help/en/docs_src/eeschema/: Eeschema_Chapter10_EN-plot_and-print.odt  Eeschema_Chapter11_EN-libedit-basis.odt  Eeschema_Chapter11_EN.odt  Eeschema_Chapter12_EN-libedit-adv.odt  Eeschema_Chapter13_EN-viewlib.odt  Eeschema_Chapter14_EN_customize_netlists_and_BOM.odt  Eeschema_Chapter1_EN.odt  Eeschema_Chapter2_EN.odt  Eeschema_Chapter3_EN.odt  Eeschema_Chapter4_EN.odt  Eeschema_Chapter5_EN.odt  Eeschema_Chapter5_EN.sxw  Eeschema_Chapter6_EN_hierarchies.odt  Eeschema_Chapter7_EN-annotate.odt  Eeschema_Chapter7_EN-annotate.sxw  Eeschema_Chapter8_EN-erc.odt  Eeschema_Chapter8_EN-erc.sxw  Eeschema_Chapter9_EN-netlists.odt  Eeschema_Chapter9_EN-netlists.sxw  Eeschema_covers_EN.odt  eeschema_EN.odm  eeschema_EN.sxg
doc/help/en/docs_src/gerbview/: dcodes.odt  gerbview.sxg  gerbview_en.odt  rs274x.odt
doc/help/en/docs_src/kicad/: kicad_EN.odt
doc/help/en/docs_src/pcbnew/: pcbnewFlowChart.odg  pcbnew_EN.odm  pcbnew_EN.sxg  pcbnew_chap10_EN.odt  pcbnew_chap11_EN.odt  pcbnew_chap12_EN.odt  pcbnew_chap1_EN.odt  pcbnew_chap2_EN.odt  pcbnew_chap3_EN.odt  pcbnew_chap4_EN.odt  pcbnew_chap5_EN.odt  pcbnew_chap6_EN.odt  pcbnew_chap7_EN.odt  pcbnew_chap8_EN.odt  pcbnew_chap9_EN.odt  pcbnew_covers_EN.odt
doc/help/en/docs_src/pl_editor/: pl_editor_EN.odt
doc/help/file_formats/docs_src/: board_file_format_EN.odt  file_formats.odm  file_formats.sxg  library_file_format_EN.odt  page_layout_file_format.odt  s-expr_pcbnew_file_format.odt  schematic_file_format_EN.odt
doc/help/footprint-for-pcbnew-doc/: merge_ps-files.bat
doc/help/footprints_doc/: libcms.ps  merge_ps-files.ps
doc/help/fr/docs_src/cvpcb/: cvpcb-fr.odt  cvpcb-fr.sxg
doc/help/fr/docs_src/eeschema/: Eeschema_Chapter14_EN_customize_netlists_and_BOM.odt  chap1.odt  chap10-plot-print.odt  chap10-plot-print.sxw  chap11-libedit-bases.odt  chap12-libedit-av.odt  chap13-viewlib.odt  chap2-commandes.odt  chap3-menu.odt  chap4-toolbar.odt  chap5-edition.odt  chap6-hierarchies.odt  chap7-annotation.odt  chap8-erc.odt  chap8-erc.sxw  chap9-netlistes.odt  eeschema.odm  eeschema.sxg  eeschema_covers_FR.odt
doc/help/fr/docs_src/kicad/: kicad_FR.odt
doc/help/fr/docs_src/pcbnew/: pcbnew.odm  pcbnew.sxg  pcbnew_chap10_FR.odt  pcbnew_chap11_FR.odt  pcbnew_chap12_FR.odt  pcbnew_chap1_FR.odt  pcbnew_chap2_FR.odt  pcbnew_chap3_FR.odt  pcbnew_chap4_FR.odt  pcbnew_chap5_FR.odt  pcbnew_chap6_FR.odt  pcbnew_chap7_FR.odt  pcbnew_chap8_FR.odt  pcbnew_chap9_FR.odt  pcbnew_covers_FR.odt
doc/help/ja/docs_src/eeschema/: Eeschema_Chapter10_JA.odt  Eeschema_Chapter1_JA.odt  Eeschema_Chapter2_JA.odt  Eeschema_Chapter3_JA.odt  Eeschema_Chapter4_JA.odt  Eeschema_Chapter5_JA.odt  Eeschema_Chapter6_JA.odt  Eeschema_Chapter7_JA.odt  Eeschema_Chapter8_JA.odt  Eeschema_Chapter9_JA.odt
doc/help/ja/docs_src/getting_started_in_kicad/: getting_started_in_kicad_ja.odt
doc/help/pl/docs_src/cvpcb/: cvpcb_PL.odt  cvpcb_cover_PL.odt
doc/help/pl/docs_src/eeschema/: Eeschema_Chapter13_PL-viewlib.odt  Eeschema_Chapter1_PL.odt  Eeschema_Chapter2_PL.odt  Eeschema_Chapter3_PL.odt  Eeschema_Chapter4_PL.odt  Eeschema_covers_PL.odt  eeschema_PL.odt
doc/help/pl/docs_src/kicad/: kicad_PL.odt
doc/help/pl/docs_src/kicad_tools/: kicad_tools_PL.odt
doc/help/pl/docs_src/pcbnew/: pcbnew_PL.odt
doc/help/pl/docs_src/pl_editor/: pl_editor_PL.odt
doc/help/pt/docs_src/cvpcb/: cvpcb_BR.odt  cvpcb_capa_pt_br.odt
doc/help/pt/docs_src/eeschema/: EEschema_capa_pt_BR.odt  Eeschema_Chapter11_BR.odt  Eeschema_Chapter12_BR.odt  Eeschema_Chapter2_BR.odt  Eeschema_Chapter3_BR.odt  (+5 more)
doc/help/ru/: contents.hhc
doc/tutorials/: CMakeLists.txt
doc/tutorials/en/: KiCad_Tutorial 2011.odt
doc/tutorials/ja/: KiCad_Tutorial.odt
(+11 files in other folders)
