install(DIRECTORY de COMPONENT doc-de
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
install(DIRECTORY en COMPONENT doc-en
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
install(DIRECTORY es COMPONENT doc-es
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
install(DIRECTORY fr COMPONENT doc-fr
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
install(DIRECTORY hu COMPONENT doc-hu
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)
install(DIRECTORY ru COMPONENT doc-ru
    DESTINATION ${KICAD_DOCS} PATTERN ".svn" EXCLUDE PATTERN "*.odt" EXCLUDE)

add_subdirectory(help)
