install(DIRECTORY de COMPONENT help-de
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY en COMPONENT help-en
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY es COMPONENT help-es
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY fr COMPONENT help-fr
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY it COMPONENT help-it
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY pt COMPONENT help-pt
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
install(DIRECTORY ru COMPONENT help-ru
    DESTINATION ${KICAD_HELP} PATTERN ".svn" EXCLUDE PATTERN "docs_src" EXCLUDE)
